Eliminate Number Format Errors.Also added detection of the MediaInfo tool before attempting to create EbuCoreModel